optimised some functions

--- a/evolution_compositionality_under_noise.ipynb
+++ b/evolution_compositionality_under_noise.ipynb
@@ -153,6 +153,21 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2019-09-06 13:20:50 \n",
+    "\n",
+    "## Decisions about how to implement repair made on 05/09/2019:\n",
+    "\n",
+    "- A listener should initiate repair probabilistically, depending on the amount of ambiguity (i.e. uncertainty about the intended referent) that is left after receiving the signal (this could also be expressed as the inverse of the amount of bits of information that the signal provides)\n",
+    "- The reason for initiating repair is therefore always to reduce ambiguity, not just because noise happened. That means that if the listener received a noisy form but is still able to narrow their interpretation down to a single meaning, they will never initiate repair. Similarly, if the listener uses a degenerate language to interpret utterances, they will always initiate repair, even if they've received a complete form. We can however cap the number of repeated repair initiators within a given interaction to 3, because that's where we see people stop trying in real linguistic interactions as well.\n",
+    "- What is the cost of repair? No repair should have no cost (in terms of efficiency), while an open request should have a slightly higher cost than a restricted request. The reasoning behind that being that in a restricted request sequence, parts of the trouble source turn can be 're-used': we assume that the listener can only use a restricted request if they have understood at least part of the meaning (which, in the case of our simple toy languages, is equivalent to being able to narrow down the possible interpretations to two candidates). The listener can then ask for clarification about only the other part of the meaning, which means that the speaker only has to repeat part of the signal.\n",
+    "\n",
+    "- Another idea (that might be worth looking into later) is that the costs of repair could be expressed in terms of how many repair sequences are necessary within a given interaction. There you would expect that the costs of repair are higher when using a degenerate language than when using a different type of language."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -259,11 +274,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-05T16:09:42.269757Z",
-     "start_time": "2019-09-05T16:09:42.266076Z"
+     "end_time": "2019-09-06T11:30:50.606061Z",
+     "start_time": "2019-09-06T11:30:50.602577Z"
     }
    },
    "outputs": [],
@@ -298,11 +313,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-05T16:09:42.408113Z",
-     "start_time": "2019-09-05T16:09:42.398406Z"
+     "end_time": "2019-09-06T11:30:50.691382Z",
+     "start_time": "2019-09-06T11:30:50.682043Z"
     }
    },
    "outputs": [],
@@ -399,11 +414,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-05T16:09:42.412510Z",
-     "start_time": "2019-09-05T16:09:42.409688Z"
+     "end_time": "2019-09-06T11:30:50.695723Z",
+     "start_time": "2019-09-06T11:30:50.692778Z"
     }
    },
    "outputs": [
@@ -428,11 +443,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-05T16:09:42.421466Z",
-     "start_time": "2019-09-05T16:09:42.413988Z"
+     "end_time": "2019-09-06T11:38:35.992787Z",
+     "start_time": "2019-09-06T11:38:35.985356Z"
     }
    },
    "outputs": [
@@ -472,7 +487,7 @@
     "print('')\n",
     "print(\"degenerate_lang is:\")\n",
     "print(degenerate_lang)\n",
-    "class_degenerate_lang = classify_language(degenerate_lang, forms, meanings)\n",
+    "class_degenerate_lang = classify_language(degenerate_lang, forms_without_noise, meanings)\n",
     "print(\"class_degenerate_lang is:\")\n",
     "print(class_degenerate_lang)\n",
     "\n",
@@ -480,7 +495,7 @@
     "print('')\n",
     "print(\"holistic_lang is:\")\n",
     "print(holistic_lang)\n",
-    "class_holistic_lang = classify_language(holistic_lang, forms, meanings)\n",
+    "class_holistic_lang = classify_language(holistic_lang, forms_without_noise, meanings)\n",
     "print(\"class_holistic_lang is:\")\n",
     "print(class_holistic_lang)\n",
     "\n",
@@ -488,7 +503,7 @@
     "print('')\n",
     "print(\"other_lang is:\")\n",
     "print(other_lang)\n",
-    "class_other_lang = classify_language(other_lang, forms, meanings)\n",
+    "class_other_lang = classify_language(other_lang, forms_without_noise, meanings)\n",
     "print(\"class_other_lang is:\")\n",
     "print(class_other_lang)\n",
     "\n",
@@ -496,7 +511,7 @@
     "print('')\n",
     "print(\"compositional_lang is:\")\n",
     "print(compositional_lang)\n",
-    "class_compositional_lang = classify_language(compositional_lang, forms,\n",
+    "class_compositional_lang = classify_language(compositional_lang, forms_without_noise,\n",
     "                                             meanings)\n",
     "print(\"class_compositional_lang is:\")\n",
     "print(class_compositional_lang)"
@@ -523,11 +538,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-05T16:09:42.541804Z",
-     "start_time": "2019-09-05T16:09:42.535165Z"
+     "end_time": "2019-09-06T11:38:38.822394Z",
+     "start_time": "2019-09-06T11:38:38.815682Z"
     },
     "code_folding": []
    },
@@ -621,11 +636,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-05T16:09:42.801606Z",
-     "start_time": "2019-09-05T16:09:42.793320Z"
+     "end_time": "2019-09-06T11:38:40.249043Z",
+     "start_time": "2019-09-06T11:38:40.241795Z"
     }
    },
    "outputs": [],
@@ -690,11 +705,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-05T16:10:03.151192Z",
-     "start_time": "2019-09-05T16:10:03.147345Z"
+     "end_time": "2019-09-06T11:38:40.384379Z",
+     "start_time": "2019-09-06T11:38:40.380248Z"
     },
     "code_folding": []
    },
@@ -733,11 +748,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-05T16:10:04.684422Z",
-     "start_time": "2019-09-05T16:10:04.669862Z"
+     "end_time": "2019-09-06T11:38:40.523708Z",
+     "start_time": "2019-09-06T11:38:40.514148Z"
     }
    },
    "outputs": [
@@ -747,7 +762,7 @@
        "'aa'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,18 +780,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-05T16:11:19.012648Z",
-     "start_time": "2019-09-05T16:11:19.009423Z"
+     "end_time": "2019-09-06T11:38:52.239452Z",
+     "start_time": "2019-09-06T11:38:52.235659Z"
     }
    },
    "outputs": [],
    "source": [
     "import random\n",
     "\n",
-    "def receive(language, utterance):\n",
+    "def receive_without_repair(language, utterance):\n",
     "    \"\"\"\n",
     "    Takes a language and an utterance, and returns an interpretation of that utterance, following the language\n",
     "\n",
@@ -802,11 +817,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-05T16:11:26.833635Z",
-     "start_time": "2019-09-05T16:11:26.829735Z"
+     "end_time": "2019-09-06T11:38:55.957324Z",
+     "start_time": "2019-09-06T11:38:55.953996Z"
     }
    },
    "outputs": [
@@ -816,13 +831,224 @@
        "'02'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "receive(compositional_lang, 'aa')"
+    "receive_without_repair(compositional_lang, 'aa')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Let's implement our repair initiation function\n",
+    "\n",
+    "Above we decided that repair should be initiated probabilistically, depending on the level of ambiguity that is left after having received the speaker's utterance. We should also implement the possibility of turning on or off an efficiency pressure which, when on, makes the listener decide to initiate repair not just based on ambiguity, but also on the costs of the type of repair initiator that is presumed to be necessary. To start us off, we'll start with an open request costing 2/3, a restricted request costing 1/3, and no repair costing 0."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First we need a function that takes a noisy form and works back to determine which possible complete forms it could have stemmed from:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-06T12:08:05.588287Z",
+     "start_time": "2019-09-06T12:08:05.584620Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def noisy_to_complete_forms(noisy_form, forms_without_noise):\n",
+    "    possible_complete_forms = []\n",
+    "    amount_of_noise = noisy_form.count('_')\n",
+    "    for complete_form in forms_without_noise:\n",
+    "        similarity_score = 0\n",
+    "        for i in range(len(noisy_form)):\n",
+    "            if noisy_form[i] == complete_form[i]:\n",
+    "                similarity_score += 1\n",
+    "        if similarity_score == len(complete_form)-amount_of_noise:\n",
+    "            possible_complete_forms.append(complete_form)\n",
+    "    return possible_complete_forms"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's test our noisy_to_complete_forms() function:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-06T12:08:16.331412Z",
+     "start_time": "2019-09-06T12:08:16.327360Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['aa', 'ab']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "noisy_to_complete_forms('a_', forms_without_noise)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-06T13:41:21.447193Z",
+     "start_time": "2019-09-06T13:41:21.440802Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def receive_with_repair(language, utterance):\n",
+    "    print(\"meanings are:\")\n",
+    "    print(meanings)\n",
+    "    print(\"language is:\")\n",
+    "    print(language)\n",
+    "    possible_interpretations = []\n",
+    "    if '_' in utterance:\n",
+    "       possible_complete_forms = noisy_to_complete_forms(utterance, forms_without_noise) \n",
+    "    print(\"possible_complete_forms are:\")\n",
+    "    print(possible_complete_forms)\n",
+    "    for i in range(len(language)):\n",
+    "        if language[i] in possible_complete_forms:\n",
+    "            possible_interpretations.append(meanings[i])\n",
+    "    print('possible_interpretations')\n",
+    "    print(possible_interpretations)\n",
+    "    ambiguity = len(possible_interpretations)/len(meanings)\n",
+    "    print(\"ambiguity is:\")\n",
+    "    print(ambiguity)\n",
+    "    part_meaning_score = 0\n",
+    "    for j in range(len(possible_interpretations)):\n",
+    "        for k in range(len(possible_interpretations)):\n",
+    "            for l in range(len(possible_interpretations[0])):\n",
+    "                print('')\n",
+    "                print(\"possible_interpretations[j][l] is:\")\n",
+    "                print(possible_interpretations[j][l])\n",
+    "                print(\"possible_interpretations[k][l] is:\")\n",
+    "                print(possible_interpretations[k][l])\n",
+    "                if possible_interpretations[j][l] == possible_interpretations[k][l]:\n",
+    "                    part_meaning_score += 1\n",
+    "                print(\"part_meaning_score is:\")\n",
+    "                print(part_meaning_score)\n",
+    "    print('')\n",
+    "    print('')\n",
+    "    print(\"part_meaning_score is:\")\n",
+    "    print(part_meaning_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-06T13:41:22.011849Z",
+     "start_time": "2019-09-06T13:41:22.002772Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "meanings are:\n",
+      "['02', '03', '12', '13']\n",
+      "language is:\n",
+      "('aa', 'ab', 'ba', 'bb')\n",
+      "possible_complete_forms are:\n",
+      "['aa', 'ab']\n",
+      "possible_interpretations\n",
+      "['02', '03']\n",
+      "ambiguity is:\n",
+      "0.5\n",
+      "\n",
+      "possible_interpretations[j][l] is:\n",
+      "0\n",
+      "possible_interpretations[k][l] is:\n",
+      "0\n",
+      "part_meaning_score is:\n",
+      "1\n",
+      "\n",
+      "possible_interpretations[j][l] is:\n",
+      "2\n",
+      "possible_interpretations[k][l] is:\n",
+      "2\n",
+      "part_meaning_score is:\n",
+      "2\n",
+      "\n",
+      "possible_interpretations[j][l] is:\n",
+      "0\n",
+      "possible_interpretations[k][l] is:\n",
+      "0\n",
+      "part_meaning_score is:\n",
+      "3\n",
+      "\n",
+      "possible_interpretations[j][l] is:\n",
+      "2\n",
+      "possible_interpretations[k][l] is:\n",
+      "3\n",
+      "part_meaning_score is:\n",
+      "3\n",
+      "\n",
+      "possible_interpretations[j][l] is:\n",
+      "0\n",
+      "possible_interpretations[k][l] is:\n",
+      "0\n",
+      "part_meaning_score is:\n",
+      "4\n",
+      "\n",
+      "possible_interpretations[j][l] is:\n",
+      "3\n",
+      "possible_interpretations[k][l] is:\n",
+      "2\n",
+      "part_meaning_score is:\n",
+      "4\n",
+      "\n",
+      "possible_interpretations[j][l] is:\n",
+      "0\n",
+      "possible_interpretations[k][l] is:\n",
+      "0\n",
+      "part_meaning_score is:\n",
+      "5\n",
+      "\n",
+      "possible_interpretations[j][l] is:\n",
+      "3\n",
+      "possible_interpretations[k][l] is:\n",
+      "3\n",
+      "part_meaning_score is:\n",
+      "6\n",
+      "\n",
+      "\n",
+      "part_meaning_score is:\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "receive_with_repair(compositional_lang, 'a_')"
    ]
   },
   {
