added receive_with_repair() function

--- a/evolution_compositionality_under_noise.ipynb
+++ b/evolution_compositionality_under_noise.ipynb
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-09-09T14:44:19.212070Z",
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-09-09T14:44:19.300517Z",
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-09-09T14:44:19.304933Z",
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-09-09T14:44:19.314042Z",
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-09-09T14:44:19.377946Z",
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-09-09T14:44:19.522676Z",
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-09-09T14:44:19.598713Z",
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-09-09T14:44:19.677382Z",
@@ -762,7 +762,7 @@
        "'aa'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-09-09T14:44:19.748560Z",
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-09-09T14:44:19.818974Z",
@@ -831,7 +831,7 @@
        "'02'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-09-09T14:44:19.964143Z",
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-09-09T14:44:20.033578Z",
@@ -903,7 +903,7 @@
        "['aa', 'ab']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,8 +913,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can write the function that does the actual receiving of a signal and deciding whether or not to do repair. There are two variables that play a role in the process of deciding whether or not to initiate repair: the amount of ambiguity left after receiving the utterance, and the cost of the require repair initiator. The three possible responses a listener can give when receiving an utterance are:\n",
+    "\n",
+    "1. no repair (i.e. just interpret the utterance using the receive_without_repair() function above)\n",
+    "2. restricted request (ask for clarification about part of the meaning)\n",
+    "3. open request (ask for clarification about the whole meaning\n",
+    "\n",
+    "To start simple, let's say that these are the probabilities of initiating the three options, depending on the ambiguity _u_ (I'm calling this _u_ for uncertainty, because _a_ for ambiguity already has a different meaning above, in Kirby et al.'s, 2015 production function), and the cost of the required repair initiator _c_:\n",
+    "\n",
+    "$$\n",
+    "P(r \\mid H, c) \\propto \\Bigg\\{\n",
+    "\\begin{array}{ll}\n",
+    "(H-c \\; \\; \\textrm{if} \\; t \\; \\textrm{is mapped to} \\; f \\; \\textrm{in} \\; l\\\\ \n",
+    "\\frac{\\epsilon}{|F|-1} \\quad \\quad \\quad \\textrm{if} \\; t \\; \\textrm{is not mapped to} \\; f \\; \\textrm{in} \\; l\n",
+    "\\end{array}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "where $r$ stands for response, $u$ for uncertainty, $c_{r}$ for the cost of response $r$, and $R$ for the full set of possible responses.\n",
+    "\n",
+    "Let's work through an example to see how this works out. Say the speaker uses compositional language [aa, ab, ba, bb], and the costs of the repair initiators are 0 for no repair, 1/3 for a restricted request, and 2/3 for an open request.\n",
+    "\n",
+    "- If the listener receives utterance 'aa', uncertainty _u_ = 0. Therefore, the probability of the \"no repair\" option is proportional to (1-0)-0 = 1; the probability of the \"restricted request\" option is proportional to $(1-0)-\\frac{1}{3} = \\frac{2}{3}$; and the probability of the \"open request\" option is proportional to $(1-0)-\\frac{2}{3} = \\frac{1}{3}$.\n",
+    "- If the listener receives utterance 'a_', uncertainty _u_ = 0.5. Therefore, the probability of the \"no repair\" option is proportional to (1-0.5)-0 = 0.5; the probability of the \"restricted request\" option is proportional to $(1-0.5)-\\frac{1}{3} = \\frac{1}{6}$; and the probability of the \"open request\" option is proportional to $(1-0.5)-\\frac{2}{3} = \\frac{1}{3}$."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-09-09T14:44:52.725483Z",
@@ -923,46 +952,191 @@
    },
    "outputs": [],
    "source": [
-    "def receive_with_repair(language, utterance):\n",
-    "    print(\"meanings are:\")\n",
-    "    print(meanings)\n",
-    "    print(\"language is:\")\n",
-    "    print(language)\n",
-    "    possible_interpretations = []\n",
-    "    if '_' in utterance:\n",
-    "       possible_complete_forms = noisy_to_complete_forms(utterance, forms_without_noise) \n",
-    "    print(\"possible_complete_forms are:\")\n",
-    "    print(possible_complete_forms)\n",
-    "    for i in range(len(language)):\n",
-    "        if language[i] in possible_complete_forms:\n",
-    "            possible_interpretations.append(meanings[i])\n",
-    "    print('possible_interpretations')\n",
-    "    print(possible_interpretations)\n",
-    "    ambiguity = len(possible_interpretations)/len(meanings)\n",
-    "    print(\"ambiguity is:\")\n",
-    "    print(ambiguity)\n",
-    "    part_meaning_score = 0\n",
-    "    for j in range(len(possible_interpretations)):\n",
-    "        for k in range(len(possible_interpretations)):\n",
-    "            for l in range(len(possible_interpretations[0])):\n",
-    "                print('')\n",
-    "                print(\"possible_interpretations[j][l] is:\")\n",
-    "                print(possible_interpretations[j][l])\n",
-    "                print(\"possible_interpretations[k][l] is:\")\n",
-    "                print(possible_interpretations[k][l])\n",
-    "                if possible_interpretations[j][l] == possible_interpretations[k][l]:\n",
-    "                    part_meaning_score += 1\n",
-    "                print(\"part_meaning_score is:\")\n",
-    "                print(part_meaning_score)\n",
-    "    print('')\n",
-    "    print('')\n",
-    "    print(\"part_meaning_score is:\")\n",
-    "    print(part_meaning_score)"
+    "def entropy_of_utterance(possible_interpretations):\n",
+    "    probability_intended_meaning = 1./len(possible_interpretations)\n",
+    "    entropy = 0.\n",
+    "    for m in meanings:\n",
+    "        if m in possible_interpretations:\n",
+    "            entropy += probability_intended_meaning * np.log2(probability_intended_meaning)\n",
+    "    entropy = -entropy\n",
+    "    return entropy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "entropy is:\n",
+      "-0.0\n",
+      "\n",
+      "entropy is:\n",
+      "1.0\n",
+      "\n",
+      "entropy is:\n",
+      "1.584962500721156\n",
+      "\n",
+      "entropy is:\n",
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "possible_interpretations = ['02']\n",
+    "entropy = entropy_of_utterance(possible_interpretations)\n",
+    "print(\"entropy is:\")\n",
+    "print(entropy)\n",
+    "\n",
+    "print('')\n",
+    "possible_interpretations = ['02', '03']\n",
+    "entropy = entropy_of_utterance(possible_interpretations)\n",
+    "print(\"entropy is:\")\n",
+    "print(entropy)\n",
+    "\n",
+    "print('')\n",
+    "possible_interpretations = ['02', '03', '12']\n",
+    "entropy = entropy_of_utterance(possible_interpretations)\n",
+    "print(\"entropy is:\")\n",
+    "print(entropy)\n",
+    "\n",
+    "print('')\n",
+    "possible_interpretations = ['02', '03', '12', '13']\n",
+    "entropy = entropy_of_utterance(possible_interpretations)\n",
+    "print(\"entropy is:\")\n",
+    "print(entropy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-09-09T14:44:52.725483Z",
+     "start_time": "2019-09-09T14:44:52.717714Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def receive_with_repair(language, utterance, efficiency_pressure, cost_vector):\n",
+    "    print(\"meanings are:\")\n",
+    "    print(meanings)\n",
+    "    print(\"language is:\")\n",
+    "    print(language)\n",
+    "    print(\"utterance is:\")\n",
+    "    print(utterance)\n",
+    "    if '_' in utterance:\n",
+    "        print(\"Alright, there is some noise in the signal. Let's see what we can do with it:\")\n",
+    "        part_meanings_as_ints = []\n",
+    "        for i in range(len(meanings)):\n",
+    "            for j in range(len(meanings[0])):\n",
+    "                part_meanings_as_ints.append(int(meanings[i][j]))\n",
+    "        max_part_meaning = max(part_meanings_as_ints)\n",
+    "        possible_partial_meanings = [False for x in range(max_part_meaning+1)]\n",
+    "        for i in range(len(utterance)):\n",
+    "            if utterance[i] != '_':\n",
+    "                for j in range(len(language)):\n",
+    "                    if language[j][i] == utterance[i]:\n",
+    "                        possible_partial_meanings[int(meanings[j][i])] = True\n",
+    "        print(\"possible_partial_meanings is:\")\n",
+    "        print(possible_partial_meanings)\n",
+    "        if possible_partial_meanings.count(True) == 1:\n",
+    "            print(\"Ahhhhh, that's a slight relief: possible_partial_meanings.count(True) == 1\")\n",
+    "            possible_complete_forms = noisy_to_complete_forms(utterance, forms_without_noise)\n",
+    "            print(\"possible_complete_forms are:\")\n",
+    "            print(possible_complete_forms)\n",
+    "            possible_interpretations = []\n",
+    "            for i in range(len(language)):\n",
+    "                if language[i] in possible_complete_forms:\n",
+    "                    possible_interpretations.append(meanings[i])\n",
+    "        elif possible_partial_meanings.count(True) > 1:\n",
+    "            print(\"UH-OH! possible_partial_meanings.count(True) > 1)\")\n",
+    "            possible_partial_meanings_as_ints = np.where(np.array(possible_partial_meanings)==True)[0]\n",
+    "            possible_interpretations = []\n",
+    "            for i in range(len(meanings)):\n",
+    "                for j in range(len(possible_partial_meanings_as_ints)):\n",
+    "                    if str(possible_partial_meanings_as_ints[j]) in meanings[i]:\n",
+    "                        possible_interpretations.append(meanings[i])\n",
+    "        print('possible_interpretations')\n",
+    "        print(possible_interpretations)\n",
+    "        \n",
+    "    language_class = classify_language(language, forms_without_noise, meanings)\n",
+    "    print(\"language_class is:\")\n",
+    "    print(language_class)\n",
+    "    entropy = entropy_of_utterance(possible_interpretations)\n",
+    "    print(\"entropy is:\")\n",
+    "    print(entropy)\n",
+    "    certainty = 1./len(possible_interpretations)\n",
+    "    print(\"certainty is:\")\n",
+    "    print(certainty)\n",
+    "    uncertainty = 1.-certainty\n",
+    "    print(\"uncertainty is:\")\n",
+    "    print(uncertainty)\n",
+    "    if uncertainty == 0.:\n",
+    "        print('')\n",
+    "        print('ALLRIGHT! uncertainty == 0.')\n",
+    "        response = possible_interpretations[0]\n",
+    "    else:\n",
+    "        print('')\n",
+    "        print('OOEEII, uncertainty > 0.')\n",
+    "        open_request = ''\n",
+    "        for i in range(len(forms_without_noise[0])):\n",
+    "            open_request = open_request+'?'\n",
+    "        print(\"open_request is:\")\n",
+    "        print(open_request)\n",
+    "        if possible_partial_meanings.count(True) == 1:\n",
+    "            print('')\n",
+    "            print(\"OH WELL THAT MAKES THINGS A BIT BETTER; possible_partial_meanings.count(True) > 1\")\n",
+    "            for i in range(len(utterance)):\n",
+    "                if utterance[i] != '_':\n",
+    "                    understood = np.where(np.array(possible_partial_meanings)==True)[0]\n",
+    "                    if len(np.where(np.array(possible_partial_meanings)==True)[0]) > 1:\n",
+    "                        print(\"Waaiiitt, something's not right!\")\n",
+    "                    print(\"understood is:\")\n",
+    "                    print(understood)\n",
+    "                    restricted_request = str(understood[0])+'?'\n",
+    "            print(\"restricted_request is:\")\n",
+    "            print(restricted_request)\n",
+    "            possible_responses = [random.choice(possible_interpretations), restricted_request]\n",
+    "            print(\"possible_responses is:\")\n",
+    "            print(possible_responses)\n",
+    "            if efficiency_pressure:\n",
+    "#                 response_probs = np.array([certainty-cost_vector[0], uncertainty-cost_vector[1]])\n",
+    "                response_probs = np.array([certainty-cost_vector[0], 1.-cost_vector[1]])\n",
+    "            else:\n",
+    "                response_probs = np.array([0., 1.])\n",
+    "            response_probs = np.divide(response_probs, np.sum(response_probs))\n",
+    "            print(\"response_probs are:\")\n",
+    "            print(response_probs)\n",
+    "        elif possible_partial_meanings.count(True) > 1:\n",
+    "            print('')\n",
+    "            print(\"UH-OH! possible_partial_meanings.count(True) > 1\")\n",
+    "            possible_responses = [random.choice(possible_interpretations), open_request]\n",
+    "            print(\"possible_responses are:\")\n",
+    "            print(possible_responses)\n",
+    "            if efficiency_pressure:\n",
+    "#                 response_probs = np.array([certainty-cost_vector[0], uncertainty-cost_vector[2]])\n",
+    "                response_probs = np.array([certainty-cost_vector[0], 1.-cost_vector[2]])\n",
+    "            else:\n",
+    "                response_probs = np.array([0., 1.])\n",
+    "            response_probs = np.divide(response_probs, np.sum(response_probs))\n",
+    "            print(\"response_probs are:\")\n",
+    "            print(response_probs)\n",
+    "        response_index = np.random.choice(np.arange(len(possible_responses)), p=response_probs)\n",
+    "        print(\"response_index is:\")\n",
+    "        print(response_index)\n",
+    "        response = possible_responses[response_index]\n",
+    "        print(\"response is:\")\n",
+    "        print(response)\n",
+    "    return response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-09-06T13:41:22.011849Z",
@@ -978,77 +1152,60 @@
       "['02', '03', '12', '13']\n",
       "language is:\n",
       "('aa', 'ab', 'ba', 'bb')\n",
+      "utterance is:\n",
+      "_b\n",
+      "Alright, there is some noise in the signal. Let's see what we can do with it:\n",
+      "possible_partial_meanings is:\n",
+      "[False, False, False, True]\n",
+      "Ahhhhh, that's a slight relief: possible_partial_meanings.count(True) == 1\n",
       "possible_complete_forms are:\n",
-      "['aa', 'ab']\n",
+      "['ab', 'bb']\n",
       "possible_interpretations\n",
-      "['02', '03']\n",
-      "ambiguity is:\n",
+      "['03', '13']\n",
+      "language_class is:\n",
+      "3\n",
+      "entropy is:\n",
+      "1.0\n",
+      "certainty is:\n",
+      "0.5\n",
+      "uncertainty is:\n",
       "0.5\n",
       "\n",
-      "possible_interpretations[j][l] is:\n",
+      "OOEEII, uncertainty > 0.\n",
+      "open_request is:\n",
+      "??\n",
+      "\n",
+      "OH WELL THAT MAKES THINGS A BIT BETTER; possible_partial_meanings.count(True) > 1\n",
+      "understood is:\n",
+      "[3]\n",
+      "restricted_request is:\n",
+      "3?\n",
+      "possible_responses is:\n",
+      "['03', '3?']\n",
+      "response_probs are:\n",
+      "[0.41666667 0.58333333]\n",
+      "response_index is:\n",
       "0\n",
-      "possible_interpretations[k][l] is:\n",
-      "0\n",
-      "part_meaning_score is:\n",
-      "1\n",
-      "\n",
-      "possible_interpretations[j][l] is:\n",
-      "2\n",
-      "possible_interpretations[k][l] is:\n",
-      "2\n",
-      "part_meaning_score is:\n",
-      "2\n",
-      "\n",
-      "possible_interpretations[j][l] is:\n",
-      "0\n",
-      "possible_interpretations[k][l] is:\n",
-      "0\n",
-      "part_meaning_score is:\n",
-      "3\n",
-      "\n",
-      "possible_interpretations[j][l] is:\n",
-      "2\n",
-      "possible_interpretations[k][l] is:\n",
-      "3\n",
-      "part_meaning_score is:\n",
-      "3\n",
-      "\n",
-      "possible_interpretations[j][l] is:\n",
-      "0\n",
-      "possible_interpretations[k][l] is:\n",
-      "0\n",
-      "part_meaning_score is:\n",
-      "4\n",
-      "\n",
-      "possible_interpretations[j][l] is:\n",
-      "3\n",
-      "possible_interpretations[k][l] is:\n",
-      "2\n",
-      "part_meaning_score is:\n",
-      "4\n",
-      "\n",
-      "possible_interpretations[j][l] is:\n",
-      "0\n",
-      "possible_interpretations[k][l] is:\n",
-      "0\n",
-      "part_meaning_score is:\n",
-      "5\n",
-      "\n",
-      "possible_interpretations[j][l] is:\n",
-      "3\n",
-      "possible_interpretations[k][l] is:\n",
-      "3\n",
-      "part_meaning_score is:\n",
-      "6\n",
-      "\n",
-      "\n",
-      "part_meaning_score is:\n",
-      "6\n"
+      "response is:\n",
+      "03\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'03'"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "receive_with_repair(compositional_lang, 'a_')"
+    "efficiency_pressure = True\n",
+    "cost_vector = [0., 0.3, 0.6]\n",
+    "\n",
+    "receive_with_repair(compositional_lang, '_b', efficiency_pressure, cost_vector)\n"
    ]
   },
   {
