--- a/evolution_compositionality_under_noise.ipynb
+++ b/evolution_compositionality_under_noise.ipynb
@@ -277,8 +277,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T19:19:05.002744Z",
-     "start_time": "2019-09-11T19:19:04.998920Z"
+     "end_time": "2019-09-12T08:06:04.434616Z",
+     "start_time": "2019-09-12T08:06:04.430664Z"
     }
    },
    "outputs": [],
@@ -316,8 +316,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T19:19:05.116661Z",
-     "start_time": "2019-09-11T19:19:05.107039Z"
+     "end_time": "2019-09-12T08:06:04.546470Z",
+     "start_time": "2019-09-12T08:06:04.537177Z"
     }
    },
    "outputs": [],
@@ -417,8 +417,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T19:19:05.120833Z",
-     "start_time": "2019-09-11T19:19:05.118014Z"
+     "end_time": "2019-09-12T08:06:04.550603Z",
+     "start_time": "2019-09-12T08:06:04.547922Z"
     }
    },
    "outputs": [
@@ -446,8 +446,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T19:19:05.129382Z",
-     "start_time": "2019-09-11T19:19:05.122326Z"
+     "end_time": "2019-09-12T08:06:04.559735Z",
+     "start_time": "2019-09-12T08:06:04.552101Z"
     }
    },
    "outputs": [
@@ -541,8 +541,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T19:19:05.218692Z",
-     "start_time": "2019-09-11T19:19:05.211989Z"
+     "end_time": "2019-09-12T08:06:04.652883Z",
+     "start_time": "2019-09-12T08:06:04.645437Z"
     },
     "code_folding": []
    },
@@ -639,8 +639,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T19:19:05.416438Z",
-     "start_time": "2019-09-11T19:19:05.408230Z"
+     "end_time": "2019-09-12T08:06:04.864774Z",
+     "start_time": "2019-09-12T08:06:04.856739Z"
     }
    },
    "outputs": [],
@@ -708,8 +708,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T19:19:05.524046Z",
-     "start_time": "2019-09-11T19:19:05.519968Z"
+     "end_time": "2019-09-12T08:06:04.964535Z",
+     "start_time": "2019-09-12T08:06:04.960304Z"
     },
     "code_folding": []
    },
@@ -751,8 +751,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T19:19:05.629308Z",
-     "start_time": "2019-09-11T19:19:05.619730Z"
+     "end_time": "2019-09-12T08:06:05.074250Z",
+     "start_time": "2019-09-12T08:06:05.067028Z"
     }
    },
    "outputs": [
@@ -783,8 +783,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T19:19:05.723608Z",
-     "start_time": "2019-09-11T19:19:05.720562Z"
+     "end_time": "2019-09-12T08:06:05.176910Z",
+     "start_time": "2019-09-12T08:06:05.173557Z"
     }
    },
    "outputs": [],
@@ -820,8 +820,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T19:19:05.829754Z",
-     "start_time": "2019-09-11T19:19:05.826839Z"
+     "end_time": "2019-09-12T08:06:05.280449Z",
+     "start_time": "2019-09-12T08:06:05.277630Z"
     }
    },
    "outputs": [
@@ -898,8 +898,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T19:19:06.025283Z",
-     "start_time": "2019-09-11T19:19:06.021786Z"
+     "end_time": "2019-09-12T08:06:05.491129Z",
+     "start_time": "2019-09-12T08:06:05.487339Z"
     }
    },
    "outputs": [
@@ -942,8 +942,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T19:19:06.122232Z",
-     "start_time": "2019-09-11T19:19:06.118552Z"
+     "end_time": "2019-09-12T08:06:05.586593Z",
+     "start_time": "2019-09-12T08:06:05.582813Z"
     }
    },
    "outputs": [
@@ -979,8 +979,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T19:19:06.213300Z",
-     "start_time": "2019-09-11T19:19:06.210002Z"
+     "end_time": "2019-09-12T08:06:05.681125Z",
+     "start_time": "2019-09-12T08:06:05.677775Z"
     }
    },
    "outputs": [
@@ -1026,8 +1026,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T19:19:06.303469Z",
-     "start_time": "2019-09-11T19:19:06.300019Z"
+     "end_time": "2019-09-12T08:06:05.785266Z",
+     "start_time": "2019-09-12T08:06:05.781378Z"
     }
    },
    "outputs": [
@@ -1070,8 +1070,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T19:19:06.390329Z",
-     "start_time": "2019-09-11T19:19:06.386836Z"
+     "end_time": "2019-09-12T08:06:05.877769Z",
+     "start_time": "2019-09-12T08:06:05.873922Z"
     }
    },
    "outputs": [
@@ -1121,8 +1121,8 @@
    "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T19:19:06.646473Z",
-     "start_time": "2019-09-11T19:19:06.642987Z"
+     "end_time": "2019-09-12T08:06:06.144111Z",
+     "start_time": "2019-09-12T08:06:06.140854Z"
     }
    },
    "outputs": [],
@@ -1152,8 +1152,8 @@
    "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T19:19:06.734943Z",
-     "start_time": "2019-09-11T19:19:06.732337Z"
+     "end_time": "2019-09-12T08:06:06.231234Z",
+     "start_time": "2019-09-12T08:06:06.228362Z"
     }
    },
    "outputs": [
@@ -1184,8 +1184,8 @@
    "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T19:19:06.821850Z",
-     "start_time": "2019-09-11T19:19:06.819123Z"
+     "end_time": "2019-09-12T08:06:06.319060Z",
+     "start_time": "2019-09-12T08:06:06.316397Z"
     }
    },
    "outputs": [],
@@ -1210,8 +1210,8 @@
    "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T19:19:06.908071Z",
-     "start_time": "2019-09-11T19:19:06.905405Z"
+     "end_time": "2019-09-12T08:06:06.414034Z",
+     "start_time": "2019-09-12T08:06:06.411131Z"
     }
    },
    "outputs": [
@@ -1241,11 +1241,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T19:58:47.390078Z",
-     "start_time": "2019-09-11T19:58:47.382960Z"
+     "end_time": "2019-09-12T08:06:06.507205Z",
+     "start_time": "2019-09-12T08:06:06.501128Z"
     }
    },
    "outputs": [],
@@ -1286,11 +1286,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T19:59:06.663927Z",
-     "start_time": "2019-09-11T19:59:06.660148Z"
+     "end_time": "2019-09-12T08:06:54.467254Z",
+     "start_time": "2019-09-12T08:06:54.463689Z"
     }
    },
    "outputs": [
@@ -1322,16 +1322,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T22:32:20.410479Z",
-     "start_time": "2019-09-11T22:32:20.399163Z"
+     "end_time": "2019-09-12T08:06:59.792192Z",
+     "start_time": "2019-09-12T08:06:59.781151Z"
     }
    },
    "outputs": [],
    "source": [
-    "def receive_with_repair(language, utterance, mutual_understanding, minimal_effort, cost_vector):\n",
+    "def receive_with_repair(language, utterance):\n",
     "    if not mutual_understanding and not minimal_effort:\n",
     "        raise ValueError(\n",
     "            \"Sorry, this function has only been implemented for at least one of either mutual_understanding or minimal_effort being True\"\n",
@@ -1392,11 +1392,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-09-11T22:32:22.983839Z",
-     "start_time": "2019-09-11T22:32:22.977272Z"
+     "end_time": "2019-09-12T08:07:07.611453Z",
+     "start_time": "2019-09-12T08:07:07.604354Z"
     }
    },
    "outputs": [
@@ -1413,22 +1413,22 @@
       "i is:\n",
       "1\n",
       "response is:\n",
-      "??\n",
+      "02\n",
       "\n",
       "i is:\n",
       "2\n",
       "response is:\n",
-      "12\n",
+      "02\n",
       "\n",
       "i is:\n",
       "3\n",
       "response is:\n",
-      "??\n",
+      "02\n",
       "\n",
       "i is:\n",
       "4\n",
       "response is:\n",
-      "??\n"
+      "02\n"
      ]
     }
    ],
@@ -1445,7 +1445,7 @@
     "    print('')\n",
     "    print('i is:')\n",
     "    print(i)\n",
-    "    response = receive_with_repair(example_lang, 'a_', mutual_understanding, minimal_effort, cost_vector)\n",
+    "    response = receive_with_repair(example_lang, 'a_')\n",
     "    print(\"response is:\")\n",
     "    print(response)"
    ]
